--- a/cz sample 1/about.html
+++ b/cz sample 1/about.html
@@ -6,6 +6,14 @@
 	<title>Random</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
+	<style>
+	h1{
+	font-weight:bold;
+	text-align: left;
+	font-style: italic;
+
+	}
+	</style>
 </head>
 <body>
 	<div class="jumbotron jumbotron-sub">
